# seisan-mcp

./: .gitignore  README.md  config.json  pyproject.toml
prompts/: prompt.j2
src/: database.py  models.py  server.py  util.py
tests/: test_seisan.py
tests/data/: test_config.json
tests/data/attendance/: holidays.txt  mixed.txt  multiple_onsite.txt  offsite.txt  one_month.txt  onsite.txt  overnight_offsite.txt  overnight_onsite.txt  template.txt
tests/data/expense/: holidays.csv  mixed.csv  multiple_onsite.csv  offsite.csv  one_month.csv  onsite.csv  overnight_offsite.csv  overnight_onsite.csv  template.txt
tests/data/prompt/: expense.j2  template.j2
